# sysmon-sdk

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  release.sh  test_runner.sh
.github/workflows/: pypi-release.yml  python-tests.yml
sysmon_sdk/: cli.py  config.json  config.py  core.py  daemon.py
sysmon_sdk.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py
