[project]
name = "sysmon-sdk"
version = "0.1.0"
description = "Python SDK and CLI to interact with the sysmon daemon"
authors = [{name="Arun Gupta", email="arun_o_gupta@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "psutil",
  "pytest",
  "pytest-cov",
  "pytest-order"
]


[tool.setuptools.package-data]
"sysmon_sdk" = ["config.json"]


[project.scripts]
sysmon = "sysmon_sdk.cli:main"

